<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/white"
    tools:context=".ui.about.AboutUsFragment"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/daffodil"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="30dp"
        android:text="@string/foundation"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:fontFamily="@font/comfortaa_bold"/>
    <ImageView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/foundationday"/>
    <ImageView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/foundation1"/>
    <ImageView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/foundation2"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="30dp"
        android:text="@string/alumni"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:fontFamily="@font/comfortaa_bold"/>

    <ImageView
        android:layout_width="170dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="110dp"
        android:background="@drawable/alumni1" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="18dp"
        android:text="@string/alumniname1"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:fontFamily="@font/comfortaa_light"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="17dp"
        android:text="@string/alumniname1work"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:fontFamily="@font/comfortaa_light"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="18dp"
        android:text="@string/alumniins"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:fontFamily="@font/comfortaa_light"/>


    <ImageView
        android:layout_width="170dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="110dp"
        android:background="@drawable/alumni2" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="18dp"
        android:text="@string/alumniname2"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:fontFamily="@font/comfortaa_light"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="17dp"
        android:text="@string/alumniname2work"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:fontFamily="@font/comfortaa_light"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="18dp"
        android:text="@string/alumniins"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:fontFamily="@font/comfortaa_light"/>


    <ImageView
        android:layout_width="170dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="110dp"
        android:background="@drawable/alumni3" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="18dp"
        android:text="@string/alumniname3"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:fontFamily="@font/comfortaa_light"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="17dp"
        android:text="@string/alumniname3work"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:fontFamily="@font/comfortaa_light"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="18dp"
        android:text="@string/alumniins"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:fontFamily="@font/comfortaa_light"/>

    <ImageView
        android:layout_width="170dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="110dp"
        android:background="@drawable/alumni4" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="18dp"
        android:text="@string/alumniname4"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:fontFamily="@font/comfortaa_light"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="17dp"
        android:text="@string/alumniname4work"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:fontFamily="@font/comfortaa_light"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="18dp"
        android:text="@string/alumniins"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:fontFamily="@font/comfortaa_light"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="18dp"
        android:text="@string/branch"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:fontFamily="@font/comfortaa_bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="18dp"
        android:text="@string/adress"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:fontFamily="@font/comfortaa_light"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:fontFamily="@font/comfortaa_light"/>

</LinearLayout>

</ScrollView>